fix images path

--- a/quickstart/00_intro.ipynb
+++ b/quickstart/00_intro.ipynb
@@ -196,7 +196,7 @@
     "Before we dive into features in CoQuí, it’s helpful to see how the different pieces of CoQuí fit together in a typical many-body electronic structure simulation.\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/coqui_workflow.png\" alt=\"Workflow of many-body electronic structure simulations in CoQuí\" width=\"70%\">\n",
+    "  <img src=\"../images/coqui_workflow.png\" alt=\"Workflow of many-body electronic structure simulations in CoQuí\" width=\"70%\">\n",
     "  <figcaption><em>Figure&nbsp;1:</em> General workflow of many-body electronic structure simulations in CoQuí.</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -226,6 +226,14 @@
     "\n",
     "> ⚠️ This series of tutorials is designed to be **sequantial**. The order is intentional, as each topic builds upon the previous one. Follow them in the designated order is highly recommended. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3df1e936-456a-4ede-bf78-a93742a38152",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
