--- a/quickstart/01_dft_to_coqui_converter.ipynb
+++ b/quickstart/01_dft_to_coqui_converter.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "# Preparing CoQuí inputs from DFT outputs\n",
     "\n",
-    "<figure style=\"text-align: center;\"> <img src=\"./images/coqui_workflow_wan90.png\" alt=\"Workflow of CoQui\" width=\"60%\"> </figure>\n",
+    "<figure style=\"text-align: center;\"> <img src=\"../images/coqui_workflow_wan90.png\" alt=\"Workflow of CoQui\" width=\"60%\"> </figure>\n",
     "\n",
     "As shown in the highlighted portion of the CoQuí workflow, this notebook introduces the **entry point of a CoQuí calculation**: how to prepare the inputs for many-body simulations in CoQuí.  \n",
     "\n",
@@ -82,10 +82,10 @@
     "## 🔹 Converting QE outputs for CoQuí\n",
     "\n",
     "<figure style=\"text-align: center;\"> \n",
-    "    <img src=\"./images/coqui_dft_converter.png\" alt=\"Workflow of input preparation for CoQuí\" width=\"60%\"> \n",
+    "    <img src=\"../images/coqui_dft_converter.png\" alt=\"Workflow of input preparation for CoQuí\" width=\"60%\"> \n",
     "</figure>\n",
     "\n",
-    "Here we show how to convert the Quantum ESPRESSO (QE) outputs into a format recognized by CoQuí using the customized converter **`pw2coqui.x`** which is shipped with QE. \n",
+    "Here we show how to convert the Quantum ESPRESSO (QE) outputs into a format recognized by CoQuí using the [customized converter **`pw2coqui.x`**](https://github.com/AbInitioQHub/coqui/tree/main/qe_converter). \n",
     "\n",
     "### ↔️ Running the QE converter \n",
     "Starting from a finished QE scf/nscf run, execute the converter: \n",
@@ -123,7 +123,7 @@
    "source": [
     "## 🔹 Declaring a physical system using `Mf` class\n",
     "\n",
-    "<figure style=\"text-align: center;\"> <img src=\"./images/coqui_workflow_mf.png\" alt=\"Workflow of CoQui's Wannier90 interface\" width=\"60%\"> <figcaption><em>Figure&nbsp;1:</em> Workflow of CoQuí's Wannier90 interface. </figcaption> </figure>\n",
+    "<figure style=\"text-align: center;\"> <img src=\"../images/coqui_workflow_mf.png\" alt=\"Workflow of CoQui's Wannier90 interface\" width=\"60%\"> <figcaption><em>Figure&nbsp;1:</em> Workflow of CoQuí's Wannier90 interface. </figcaption> </figure>\n",
     "\n",
     "Every CoQuí calculation begins by declaring a *physical system*. This specifies the ingredients required to construct the non-interacting Hamiltonian:\n",
     "$$\n",
@@ -260,7 +260,7 @@
    "source": [
     "## 🔹 Construct MLWFs via CoQuí's the Wannier90 interface\n",
     "\n",
-    "<figure style=\"text-align: center;\"> <img src=\"./images/coqui_workflow_wan90.png\" alt=\"Workflow of CoQui's Wannier90 interface\" width=\"60%\"> <figcaption><em>Figure&nbsp;1:</em> Workflow of CoQuí's Wannier90 interface. </figcaption> </figure>\n",
+    "<figure style=\"text-align: center;\"> <img src=\"../images/coqui_workflow_wan90.png\" alt=\"Workflow of CoQui's Wannier90 interface\" width=\"60%\"> <figcaption><em>Figure&nbsp;1:</em> Workflow of CoQuí's Wannier90 interface. </figcaption> </figure>\n",
     "\n",
     "Maximally localized Wannier functions (MLWFs) [[1](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.65.035109).[2](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.56.12847)] are a key intermediate between different components in CoQuí. They serve two essential purposes:\n",
     "- Providing a **compact real-space representation** that allows **interpolation** of spectral properties to dense k-meshes.  \n",
