--- a/quickstart/02_gw_electronic_structure.ipynb
+++ b/quickstart/02_gw_electronic_structure.ipynb
@@ -61,7 +61,7 @@
     "## 🔹 GW Workflow at a glance\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/coqui_workflow_gw.png\" alt=\"GW workflow in CoQuí\" width=\"60%\">\n",
+    "  <img src=\"../images/coqui_workflow_gw.png\" alt=\"GW workflow in CoQuí\" width=\"60%\">\n",
     "  <figcaption>GW workflow in CoQuí.</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -129,7 +129,7 @@
     "### 🔹 Phase 1: Problem Setup — what's happening?\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/coqui_problem_setup.png\" alt=\"Phase 1 of the many-body calculation workflow in CoQuí\" width=\"60%\">\n",
+    "  <img src=\"../images/coqui_problem_setup.png\" alt=\"Phase 1 of the many-body calculation workflow in CoQuí\" width=\"60%\">\n",
     "  <figcaption>Phase 1 of the many-body calculation workflow in CoQuí. </figcaption>\n",
     "</figure>\n",
     "\n",
@@ -391,7 +391,7 @@
     "### 🔹 Phase 2: Simulation (GW) — what's happening?\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/coqui_simulation_gw.png\" alt=\"Phase 2 of the GW workflow in CoQuí\" width=\"60%\">\n",
+    "  <img src=\"../images/coqui_simulation_gw.png\" alt=\"Phase 2 of the GW workflow in CoQuí\" width=\"60%\">\n",
     "  <figcaption>Phase 2 of the GW workflow in CoQuí. </figcaption>\n",
     "</figure>\n",
     "\n",
@@ -422,7 +422,7 @@
     "> With `niter=1` (and no restart), this produces the common single-shot GW on top of the 💭non-interacting $G$ from the mean-field Hamiltonina. \n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/dyson_scf.png\" alt=\"Dyson SCF\" width=\"50%\">\n",
+    "  <img src=\"../images/dyson_scf.png\" alt=\"Dyson SCF\" width=\"50%\">\n",
     "  <figcaption>CoQuí Dyson-SCF driver  </figcaption>\n",
     "</figure>\n",
     "\n",
@@ -1374,7 +1374,7 @@
     "### 🔹 Phase 3: Post-processing — why and what happens?\n",
     "\n",
     "<figure style=\"text-align: center;\"> \n",
-    "    <img src=\"./images/coqui_workflow_pproc.png\" alt=\"Phase 3 of the GW workflow in CoQuí\" width=\"60%\"> \n",
+    "    <img src=\"../images/coqui_workflow_pproc.png\" alt=\"Phase 3 of the GW workflow in CoQuí\" width=\"60%\"> \n",
     "    <figcaption>Phase 3 of the GW workflow in CoQuí. </figcaption> \n",
     "</figure>\n",
     "\n",
