--- a/quickstart/03_crpa_screened_interactions.ipynb
+++ b/quickstart/03_crpa_screened_interactions.ipynb
@@ -44,7 +44,7 @@
     "In this notebook, we explore one such application: using the **constrained random phase approximation (cRPA)** to computes the *frequency-dependent effective Coulomb interactions* $U(\\omega)$ for the V $t_{2g}$ states in SrVO$_3$ (highlighted in red in Figure 1). By separating screening processes exclusively *within* the target subspace (V $t_{2g}$) from those *outside* it, cRPA delivers the *residual* screening needed to construct an effective low-energy Hamiltonian. This procedure is central to embedding approaches such as DMFT or EDMFT, where the Hubbard $U(\\omega)$ serves as a key input.  \n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/svo_crpa_cartoon.png\" alt=\"cRPA svo\" width=\"25%\">\n",
+    "  <img src=\"../images/svo_crpa_cartoon.png\" alt=\"cRPA svo\" width=\"25%\">\n",
     "  <figcaption><em>Figure&nbsp;1:</em> cRPA of V \\(t_{2g}\\) orbitals.</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -75,7 +75,7 @@
     "## 🔹 cRPA within the generic downfolding workflow in CoQuí\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/coqui_workflow_crpa.png\" alt=\"cRPA workflow in CoQuí\" width=\"60%\">\n",
+    "  <img src=\"../images/coqui_workflow_crpa.png\" alt=\"cRPA workflow in CoQuí\" width=\"60%\">\n",
     "  <figcaption>cRPA workflow in CoQuí.</figcaption>\n",
     "</figure>\n",
     "\n",
