--- a/quickstart/04_gw_edmft_minimum.ipynb
+++ b/quickstart/04_gw_edmft_minimum.ipynb
@@ -45,7 +45,7 @@
     "import coqui.embed.edmft.utils as edmft_helper\n",
     "\n",
     "# Local utilities in TRIQS school materials\n",
-    "sys.path.append(\"./utils/\")\n",
+    "sys.path.append(\"../utils/\")\n",
     "import ctseg_solver"
    ]
   },
@@ -82,7 +82,7 @@
     "## 🔹 Realizing GW+EDMFT: CoQuí × TRIQS Collaboration\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/gw_edmft_workflow.png\" alt=\"GW+EDMFT workflow using CoQuí + TRIQS\" width=\"65%\">\n",
+    "  <img src=\"../images/gw_edmft_workflow.png\" alt=\"GW+EDMFT workflow using CoQuí + TRIQS\" width=\"65%\">\n",
     "  <figcaption>GW+EDMFT workflow using CoQuí + TRIQS.</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -109,7 +109,7 @@
     "## Test System: NiO - a paramagnetic charge-transfer insulator\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/nio_gw_edmft_summary.png\" alt=\"NiO\" width=\"80%\">\n",
+    "  <img src=\"../images/nio_gw_edmft_summary.png\" alt=\"NiO\" width=\"80%\">\n",
     "</figure>\n",
     "\n",
     "Throughout this notebook, we will use **paramagnetic nickel oxide (NiO)** as a representative correlated material.\n",
@@ -248,7 +248,7 @@
     "### ⬇️ Stage 1: Downfolding to the MLWF subspace (CoQuí)\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/gw_edmft_downfold.png\" alt=\"GW+EDMFT workflow - Downfolding\" width=\"60%\">\n",
+    "  <img src=\"../images/gw_edmft_downfold.png\" alt=\"GW+EDMFT workflow - Downfolding\" width=\"60%\">\n",
     "  <figcaption>GW+EDMFT workflow - Downfolding.</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -618,7 +618,7 @@
     "- Lastly, the calls to `.drop(1).drop(1)` remove the second and third impurities (Ni $t_{2g}$ and O $p$), leaving only the first impurity (Ni $e_g$). This reflects our choice of correlated subspace for the EDMFT calculation: we restrict the impurity problem to the Ni $e_g$ orbitals while discarding the others. \n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/nio_block_structure.png\" alt=\"Block structure cartoon of E1 and E2\" width=\"80%\">\n",
+    "  <img src=\"../images/nio_block_structure.png\" alt=\"Block structure cartoon of E1 and E2\" width=\"80%\">\n",
     "  <figcaption>Block structure cartoon of E1 and E2. </figcaption>\n",
     "</figure>"
    ]
@@ -753,7 +753,7 @@
     "### ⚛️ Stage 2-2: Impurity Problem with Dynamic Interactions\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/gw_edmft_impurity.png\" alt=\"GW+EDMFT workflow - Impurity\" width=\"65%\">\n",
+    "  <img src=\"../images/gw_edmft_impurity.png\" alt=\"GW+EDMFT workflow - Impurity\" width=\"65%\">\n",
     "</figure>\n",
     "\n",
     "In GW+EDMFT, the local physics is represented by an **auxiliary impurity model** defined by the **fermionic Weiss field $\\mathcal{G}(\\tau)$** and the **bosonic Weiss field $\\mathcal{U}(\\tau)$**: \n",
@@ -979,7 +979,7 @@
     "### ⚛️ Step 3: Impurity Solver (TRIQS-CTSEG)\n",
     "\n",
     "<figure style=\"text-align: center;\">\n",
-    "  <img src=\"./images/gw_edmft_impurity.png\" alt=\"GW+EDMFT workflow - Impurity\" width=\"65%\">\n",
+    "  <img src=\"../images/gw_edmft_impurity.png\" alt=\"GW+EDMFT workflow - Impurity\" width=\"65%\">\n",
     "  <figcaption><em>Figure&nbsp;1:</em> GW+EDMFT workflow - Impurity.</figcaption>\n",
     "</figure>\n",
     "\n",
